--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
     <div class="credit"> creado por <span> Genaro J. Ferreira </span> | derechos reservados </div>
 
 </section>
-
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/js.js"></script>
 </body>
 </html>
